@@ -43,6 +43,7 @@ gtk+4.0 (3.94.0-1) UNRELEASED; urgency=medium
     modules such as XIM and Wayland are now linked into GTK+ itself,
     while non-backend IM modules have been removed.
   * Remove obsolete debian/*.install files from GTK+ 3
+  * d/rules: Update Meson options, mostly removing enable- prefix
 
  -- Jeremy Bicha <jbicha@debian.org>  Fri, 19 Jan 2018 22:05:35 -0500
 
